--- a/index.html
+++ b/index.html
@@ -127,13 +127,13 @@
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img class="d-block w-100 carousel-image"  src="assets/img/metal-scrap.jpg" alt="Camel Image-Third">
+                <img class="d-block w-100 carousel-image"  src="assets/img/Slider-3.jpg" alt="Camel Image-Third">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100 carousel-image" src="assets/img/metal-scrap.jpg" alt="Camel Image-Third">
+                <img class="d-block w-100 carousel-image" src="assets/img/Slider-4.jpg" alt="Camel Image-Third">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100 carousel-image" src="assets/img/metal-scrap.jpg" alt="Camel Image-Third">
+                <img class="d-block w-100 carousel-image" src="assets/img/Slider-5.jpg" alt="Camel Image-Third">
               </div>
             </div>
 
