--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
             
           </div>
           <div class="col-lg-6 me-auto w-50">
-            <img class="d-block w-100 carousel-image" src="assets/img/Slider-1.jpg" alt="Camel Image-Third">
+            <img class="d-block w-100" src="assets/img/Slider-3.jpg" alt="Camel Image-Third">
           </div>
         </div>
         <div class="row">
@@ -335,10 +335,11 @@
             </ul>
 
           </div>
+          <div class="col-lg-6 me-auto w-50">
+            <img class="d-block w-100 carousel-image" src="assets/img/Slider-1.jpg" alt="Camel Image-Third">
+          </div>
         </div>
-        <div class="col-lg-6 me-auto w-50">
-          <img class="d-block w-100 carousel-image" src="assets/img/Slider-1.jpg" alt="Camel Image-Third">
-        </div>
+       
       </div>
       <div class="row">
         <div class="col-lg-6 ms-auto w-50 things bg-secondary">
@@ -351,10 +352,6 @@
         </div>
 
       </div>
-
-    </div>
-
-    </div>
 
     </div>
   </section>
