--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             class="carousel-button " aria-label="Slide 3"></button>
         </div>
         <div class="carousel-inner">
-          <div class="carousel-item active" style="background-image:  url(./assets/img/Slider-3.jpg);">
+          <div class="carousel-item active" style="background-image:  url(./assets/img/Slider-3.jpg); background-repeat: no-repeat;">
             
           </div>
           <div class="carousel-item" style="background-image:  url(./assets/img/Slider-1.jpg);">
@@ -77,10 +77,10 @@
            
           </div>
         </div>
-        <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-bs-slide-to="prev">
+        <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-bs-slide-to="prev" data-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
         </a>
-        <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-bs-slide-to="next">
+        <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-bs-slide-to="next" data-slide="next">
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
         </a>
 
